--- a/researchers/templates/researchers_list.html
+++ b/researchers/templates/researchers_list.html
@@ -26,10 +26,10 @@
 
       {% if professor.category_pretty != 'Sin información' %}
       <tr>
-        <td class='dima-group--view' data-pk='{{professor.pk}}'>
-          <a class="btn btn-link dima--table-btn-link" href="{% url 'researchers' professor.pk %}" role="button">{{professor.full_name}}</a>
+        <td class='dima-group--view' data-obscure='{{professor.obscure}}'>
+          <a class="btn btn-link dima--table-btn-link" href="{% url 'researchers' professor.obscure %}" role="button">{{professor.full_name}}</a>
           {% if user.is_authenticated %}
-            <a class='' href='{% url professors_admin|admin_urlname:'change' professor.pk %}'>Editar<i class="bi bi-pencil-square"></i></a>
+            <a class='' href='{% url professors_admin|admin_urlname:'change' professor.obscure %}'>Editar<i class="bi bi-pencil-square"></i></a>
           {% endif %}
         </td>
         <td>{{category|capfirst}}</td>
