--- a/calls/templates/convocatorias/estudiantes.html
+++ b/calls/templates/convocatorias/estudiantes.html
@@ -38,22 +38,37 @@
         <div class="row">
 
           {% for call in studentscall %}
-            {% if user.is_authenticated or call.show %}
+            {% if user.is_authenticated or call.active %}
 
-            <div class="col-md-12 col-lg-6 dima-margin-bottom__30">
+            <div class="col-md-12 col-lg-12 dima-margin-bottom__30">
               <div class="card">
                 <div class="card-body">
-                  <h1 class="card-title">{{ call.title|lower|capfirst }}
-                  <small class="text-muted">Abierta hasta {{call.expiration}}{% if not call.expired %} ({{call.expiration|timeuntil}}){% endif %} </small>
+                  <h1 class="card-title"><a href="{% url 'students_call' call.pk %}" class="dima-non_style_link">{{ call.title|lower|capfirst }}</a><br>
+                  {% if call.expired %}
+                    <small class="text-muted">Cerró en {{call.expiration}}{% if not call.expired %} ({{call.expiration|timeuntil}}){% endif %} </small>
+                  {% else %}
+                    <small class="text-muted">Abierta hasta {{call.expiration}}{% if not call.expired %} ({{call.expiration|timeuntil}}){% endif %} </small>
+                  {% endif %}
                   </h1>
 
 
                   <dl class="row">
-                    <dt class="col-sm-4">Recursos</dt>
+                    <dt class="col-sm-4">Proyecto</dt>
                     <dd class="col-sm-8">{{call.funding}}</dd>
 
                     <dt class="col-sm-4">Estímulo económico</dt>
                     <dd class="col-sm-8">{{call.economic_stimulus}}</dd>
+
+                    <dt class="col-sm-4">Tipo de estudiante{% if call.students > 1 %}s{% endif %}</dt>
+                    <dd class="col-sm-8">
+                      {% if call.undergraduate and call.postgraduate %}
+                        De pregrado y posgrado
+                      {% elif call.undergraduate and not call.postgraduate %}
+                        De pregrado
+                      {% elif not call.undergraduate and call.postgraduate %}
+                        De posgrado
+                      {% endif %}
+                    </dd>
                   </dl>
 
 
@@ -61,7 +76,13 @@
                     <div class="dima__card-badge">
                       {% if not call.active %}<span class="badge rounded-pill text-bg-danger">Oculta</span>{% endif %}
                       {% if call.expired %}<span class="badge rounded-pill text-bg-danger">Finalizada</span>{% endif %}
-                      {% if not call.expired %}<span class="badge rounded-pill text-bg-primary">Activa</span>{% endif %}
+                      {% if not call.expired %}<span class="badge rounded-pill text-bg-warning">Activa</span>{% endif %}
+                    </div>
+                    <br>
+                  {% else %}
+                    <div class="dima__card-badge">
+                      {% if call.expired %}<span class="badge rounded-pill text-bg-danger">Finalizada</span>{% endif %}
+                      {% if not call.expired %}<span class="badge rounded-pill text-bg-primary">Abierta</span>{% endif %}
                     </div>
                     <br>
                   {% endif %}
