--- a/templates/dima_menu.html
+++ b/templates/dima_menu.html
@@ -12,6 +12,8 @@
       <li><a class="dropdown-item" href="{% url 'data' %}">Dima en datos</a></li>
       <li><a class="dropdown-item" href="{% url 'equipo_de_trabajo' %}">Equipo de trabajo</a></li>
       <div class="dropdown-divider"></div>
+      <li><a class="dropdown-item" href="{% url 'formatos' %}">Formatos y solicitudes</a></li>
+      <div class="dropdown-divider"></div>
       <li><a class="dropdown-item" href="{% url 'avales' %}">Avales para grupos</a></li>
       <li><a class="dropdown-item" href="{% url 'contact' %}">Contáctenos</a></li>
       <li><a class="dropdown-item" href="{% url 'newsletters' %}">Boletines DIMA</a></li>
@@ -31,6 +33,27 @@
     </ul>
 </div>
 
+
+<!--<div class="btn-group">-->
+  <!--<div class="btn btn-default dropdown-toggle" data-bs-toggle="dropdown">-->
+    <!--Formatos y solicitudes<span class="caret"></span>-->
+  <!--</div>-->
+    <!--<ul class="dropdown-menu">-->
+      <!--<li><a class="dropdown-item" href="{% url 'formatos' %}">Formatos</a></li>-->
+    <!--</ul>-->
+<!--</div>-->
+
+
+<div class="btn-group">
+  <div class="btn btn-default dropdown-toggle" data-bs-toggle="dropdown">
+    Mecanismos de transferencias<span class="caret"></span>
+  </div>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="{% url 'spinoff' %}">Creación de Spin-Off</a></li>
+    </ul>
+</div>
+
+
 <div class="btn-group">
   <div class="btn btn-default dropdown-toggle" data-bs-toggle="dropdown">
     Servicios investigación<span class="caret"></span>
@@ -47,9 +70,3 @@
       <li><a class="dropdown-item" href="https://investigacion.unal.edu.co/boletin">Boletín un investiga</a></li>
     </ul>
 </div>
-
-
-
-
-
-
