--- a/templates/dima_accent.html
+++ b/templates/dima_accent.html
@@ -6,6 +6,10 @@
 
   <ul class="nav">
     <li class="nav-item">
+      <img class="nav-item_icon" src="{% static '/unal/Icons/application.png' %}"></img>
+      <a class="nav-link" href="{% url 'formatos' %}">Formatos y solicitudes</a>
+    </li>
+    <li class="nav-item">
       <img class="nav-item_icon" src="{% static '/unal/Icons/grafico-de-barras.png' %}"></img>
       <a class="nav-link" href="{% url 'data' %}">DIMA en datos</a>
     </li>
