--- a/dima/templates/static/equipo_de_trabajo.html
+++ b/dima/templates/static/equipo_de_trabajo.html
@@ -243,7 +243,7 @@
             <br>
             <br> 
             <br>             
-            <p class="dima-equipo-txt3">gestionpi_man@unal.edu.co </p>
+            <p class="dima-equipo-txt3">dfcollazosh@unal.edu.co </p>
             <br>             
             <p class="dima-equipo-txt3">rpacanchiquev@unal.edu.co  </p>
             <br>
