--- a/researchers/templates/researchers.html
+++ b/researchers/templates/researchers.html
@@ -14,7 +14,7 @@
   <div class="container-lg">
     <div class="row">
       <h1 class="display-8">Buscar por Nombre</h1>
-        <input type="text" id = "dima-search--first_name__researchers" onkeypress="return event.keyCode != 13">
+        <input type="text" id = "dima-search--first_name__researchers" class="search-input">
     </div>
     <div class="row">
 
