--- a/static/dima-styles.css
+++ b/static/dima-styles.css
@@ -75,7 +75,6 @@ main.detalle p{
 
 main.detalle input{
   color: #1F2022;
-  padding-left: 5px;
 }
 
 .searcher {
@@ -107,10 +106,11 @@ h4,
 h5,
 h6 {
   font-family: "Ancizar Sans Light" !important;
-  color: #14a8df !important;
+  color: #14a8df;
 }
 
 .dima-main {
+  margin: 0 5% 0 5%;
   font-size: 150%;
   line-height: 120%;
 }
@@ -122,6 +122,15 @@ h6 {
 .dima-card {
   width: 15rem;
   margin: 5px 5px;
+}
+
+.card-title{
+  color: #111;
+  font-size: 32px;
+}
+
+.card-title:hover{
+  text-decoration:underline;
 }
 
 .calls-card{
@@ -148,10 +157,41 @@ h6 {
   border-radius: 19px;
 }
 
+.cards-details{
+  display:flex;
+  justify-content: space-between;
+  padding: 0 20% 0 0%;
+}
+.card-attribute{
+  letter-spacing: 2.24px;
+  color: #11111199 !important;
+  font-size: 14px;
+  text-align: left !important;
+  margin-bottom: 0px !important;
+}
+.card-state{
+  border-style: solid;
+  border-radius: 8px;
+  border-width: thin;
+  border-color: #D3D3D3;
+  padding: 8px;
+  height: fit-content;
+  width: 200px;
+}
+.card-state-active{
+  border-color: #7bcf37;
+}
+.card-state-closed{
+  border-color: #EA1C5C;
+}
+.card-state-hidden{
+  border-color: #0D6EFD;
+}
 .cards-title {
   display: flex;
   justify-content: space-between;
 }
+
 .db-title{
   margin-left: 5px;
   font-size: 12px;
@@ -1326,11 +1366,12 @@ text-align: right;
 }
 .dima-formatos{
   position: relative;
-  display: inline list-item;
+  display: inline list-item block;
   margin: 0px ;
-  left: 0px !important;
-  width: max-content;
+  left: 0px;
+  width: 100%;
   list-style-type: none;
+  overflow-x: scroll;
 }
 .dima-formatos-table{
   margin-left: 0px;
@@ -1517,7 +1558,7 @@ text-align: right !important;
   opacity: 1;
 }
 .search-input {
-  width: 967px;
+  width: 100%;
   height: 48px;
   padding-left: 30px;
   background-image: url('/static/unal/Icons/lupa.svg') !important;
