--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary dima-navbar">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src={% static 'assets/dima_logo.svg' %} alt="Dima" width="300" height="60">
+      <img src="{% static 'assets/dima_logo.svg' %}" alt="Dima" width="300" height="60">
     </a>
 
 
