Fixed a bug that hid the formats on the Formats tab again

--- a/dima/templates/static/formatos.html
+++ b/dima/templates/static/formatos.html
@@ -32,7 +32,7 @@
 {% block result %}
   {% if file_data %}
     <div class="dima-formatos">
-      <table class='dima-content-table'>
+      <table class="dima-content-table">
         {% for key,values in file_data.items %}
           {% for value in values %}
             {% if forloop.counter0|divisibleby:4 %}
@@ -80,7 +80,7 @@
 
 <div class="dima-content">
   <p><br></p>
-  <table class='dima-content-table'>
+  <table class="dima-content-table">
     <tr>
       {% if filter  %}
         {% for file in files %}
@@ -152,7 +152,7 @@
   </h1>
   <p><br></p>
   <div class="dima-formatos">
-    <table class='dima-formatos-table'>
+    <table class="dima-formatos-table">
       <tbody class="dima-formatos-div">
         <tr class="dima-formatos-background">
           <th class="dima-formatos-table-th">Nombre</th>
