Made changes to the Data-Tab

--- a/researchers/templates/researchers_list.html
+++ b/researchers/templates/researchers_list.html
@@ -11,7 +11,7 @@
     <thead>
       <tr>
         <th scope="col">Investigadores</th>
-        <th scope="col">Categoría de investigador</th>
+        <th scope="col">Categoría</th>
         <th scope="col">Facultad</th>
         <th scope="col">Departamento</th>
         <th scope="col">Dedicación</th>        
