--- a/visualizations/templates/bars.html
+++ b/visualizations/templates/bars.html
@@ -21,7 +21,11 @@ trace1 = {
     meta: {columnNames: {color: 'C'}},
     colorsrc: 'yencardonaal:30:d6a004',
     color: {{percentages|safe}},
-    colorscale: [['0', '#8dd3c7'], ['0.09090909090909091', '#ffffb3'], ['0.18181818181818182', '#bebada'], ['0.2727272727272727', '#fb8072'], ['0.36363636363636365', '#80b1d3'], ['0.45454545454545453', '#fdb462'], ['0.5454545454545454', '#b3de69'], ['0.6363636363636364', '#fccde5'], ['0.7272727272727273', '#d9d9d9'], ['0.8181818181818182', '#bc80bd'], ['0.9090909090909091', '#ccebc5'], ['1', '#ffed6f']]
+    colorscale: [[0, "#ffa600"], [0.0909090909, "#ff8b32"], [0.18181818181, "#ff724e"],
+                 [0.27272727272, "#fb5f67"], [0.36363636363, "#e7537b"],
+                 [0.45454545454, "#cc508b"], [0.54545454545, "#ab5094"],
+                 [0.63636363636, "#865196"], [0.72727272727, "#615190"],
+                 [0.81818181818, "#3d4d83"], [0.90909090909, "#1c4771"], [1.0, "#003f5c"]]
   },
   textsrc: 'yencardonaal:30:d6a004',
   text: {{percentages|safe}},
@@ -371,7 +375,7 @@ layout = {
         },
         bgcolor: 'white'
       },
-      colorway: ['#636efa', '#EF553B', '#00cc96', '#ab63fa', '#19d3f3', '#e763fa', '#fecb52', '#ffa15a', '#ff6692', '#b6e880'],
+      colorway: ["#00c08a", "#edb21b", "#1b2141", "#2580fe", "#666983", "#92bfd4", "#0f767a", "#9bc732", "#096013", "#67f059"],
       hovermode: 'closest',
       colorscale: {
         diverging: [['0', '#8e0152'], ['0.1', '#c51b7d'], ['0.2', '#de77ae'], ['0.3', '#f1b6da'], ['0.4', '#fde0ef'], ['0.5', '#f7f7f7'], ['0.6', '#e6f5d0'], ['0.7', '#b8e186'], ['0.8', '#7fbc41'], ['0.9', '#4d9221'], ['1', '#276419']],
@@ -395,14 +399,14 @@ layout = {
   }
 };
 
-
-
-
-
+config = {
+  displayModeBar: false, // Removes the toolbar from the plot
+}
 
 Plotly.newPlot('{{id}}', {
   data: data,
   layout: layout,
+  config: config,
 
 }, {responsive: true});
 
