--- a/dima/templates/data.html
+++ b/dima/templates/data.html
@@ -1,7 +1,7 @@
 {% extends "base_unal.html" %}
 {% load static %}
 
-<!--{% block 'breadcrumb' %}-->
+{% block 'breadcrumb' %}
 <div class="breadcrumb-class breadcrumb-class__no-border">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
@@ -10,47 +10,32 @@
       <li class="breadcrumb-item dima-breadcrumb"></li>
     </ol>
   </nav>
-
-  <ul class="nav nav-tabs justify-content-end dima-nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="grupos-tab" data-bs-toggle="tab" data-bs-target="#grupos-tab-pane" type="button" role="tab" aria-controls="grupos-tab-pane" aria-selected="true">
-      Grupos de investigación
-      </button>
-    </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" href='#investigadores' id="investigadores-tab" data-bs-toggle="tab" data-bs-target="#investigadores-tab-pane" type="button" role="tab" aria-controls="investigadores-tab-pane" aria-selected="false">
-      Investigadores
-      </button>
-    </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" id="patentes-tab" data-bs-toggle="tab" data-bs-target="#patentes-tab-pane" type="button" role="tab" aria-controls="patentes-tab-pane" aria-selected="false">
-      Propiedad intelectual
-      </button>
-    </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" href='#proyectos' id="proyectos-tab" data-bs-toggle="tab" data-bs-target="#proyectos-tab-pane" type="button" role="tab" aria-controls="proyectos-tab-pane" aria-selected="false">
-      Proyectos
-      </button>
-    </li>
-  </ul>
-
-
 </div>
 {% endblock %}
 
 
 {% block 'main' %}
-
-
-    <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade show active" id="grupos-tab-pane" role="tabpanel" aria-labelledby="grupos-tab" tabindex="0">{% include 'investigacion.html' %}</div>
-      <div class="tab-pane fade" id="investigadores-tab-pane" role="tabpanel" aria-labelledby="investigadores-tab" tabindex="0">{% include 'researchers.html' %}</div>
-      <div class="tab-pane fade" id="patentes-tab-pane" role="tabpanel" aria-labelledby="patentes-tab" tabindex="0">{% include 'patents.html' %}</div>
-      <div class="tab-pane fade" id="proyectos-tab-pane" role="tabpanel" aria-labelledby="proyectos-tab" tabindex="0">{% include 'projects.html' %}</div>
-    </div>
-
-
-
-
-
+  <div>
+    <h1>Dima en datos</h1>
+    <p>
+      La Dirección de Investigaciones de Manizales DIMA tiene como objeto principal orientar, promover y financiar a través de los recursos que se le asignen, las actividades de investigación en la Sede.
+    </p>
+  </div>
+  <select class="form-select" id = "dima-select--data" aria-label="Default select example">
+    <option value="Groups">Grupos de investigación</option>
+    <option value="Researchers">Investigadores</option>
+    <option value="Patents">Propiedad intelectual</option>
+    <option value="Projects">Proyectos</option>
+  </select>
+  <div>
+    {% if data_choice == 'Default' %}
+      {% include 'investigacion.html' %}
+    {% elif data_choice == 'Default' %}
+      {% include 'investigacion.html' %}
+    {% elif data_choice == 'Default' %}
+      {% include 'investigacion.html' %}
+    {% elif data_choice == 'Default' %}
+      {% include 'investigacion.html' %}
+    {% endif %}
+  </div>
 {% endblock %}
