--- a/templates/base.html
+++ b/templates/base.html
@@ -23,11 +23,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!--<li class="nav-item">-->
-          <!--<a class="nav-link active" aria-current="page" href="#">Home</a>-->
-        <!--</li>-->
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'proyectos' %}">Proyectos Quipu</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'herramientas' %}">Herramientas</a>
         </li>
 
         <!--<li class="nav-item dropdown">-->
