--- a/projects/templates/projects_view.html
+++ b/projects/templates/projects_view.html
@@ -34,12 +34,7 @@
         {% if user.is_authenticated %}
           <a href="{% url project_admin|admin_urlname:'change' project.pk %}"> Editar <i class="bi bi-pencil-square"></i></a>
           <br>
-          <span class="dima-private"
-              data-bs-toggle="tooltip"
-              data-bs-placement="right"
-              data-bs-custom-class="custom-tooltip"
-              data-bs-title="Dato únicamente visible para el administrador">[CC: {{project.pk}}]
-          </span>
+          <a href="{% url 'projects' project.obscure %}/report" target="_blank">Generar Reporte <i class="bi bi-pencil-square"></i></a>
 
         {% endif %}
       </small>
