--- a/quipu/templates/proyectos_quipu.html
+++ b/quipu/templates/proyectos_quipu.html
@@ -13,7 +13,7 @@
 
 
 
-      <form method="post" class='dima-dragndrop_form' enctype="multipart/form-data" action='{% url "proyectos" %}'>
+      <form method="post" class="dima-dragndrop_form" enctype="multipart/form-data" action="{% url 'proyectos' %}">
         {% csrf_token %}
         <!--<input type="file" name="xmlfile" />-->
         <!--<input type="submit" name="submit" value="Upload" />-->
@@ -22,10 +22,10 @@
             <!--<input type="file" name="xmlfile" id="file" class="dima-dragndrop_input" multiple />-->
 
             <div class="mb-3">
-              <input class="form-control dima-dragndrop_input" name='xmlfile' type="file" id="file" multiple>
+              <input class="form-control dima-dragndrop_input" name="xmlfile" type="file" id="file" multiple>
             </div>
 
-            <div class="dima-dragndrop_area" for='dima-dragndrop_form'>
+            <div class="dima-dragndrop_area" for="dima-dragndrop_form">
               <strong>Seleccionar archivos</strong><span> o arrastrarlos aquí</span>.<br><br>
             </div>
           </div>
