--- a/dima/templates/static/home.html
+++ b/dima/templates/static/home.html
@@ -77,12 +77,12 @@
 
  <!-- </div>
 </div>-->
-    <div id = "PopOutDiv" class="PopOut">
+    <!-- <div id = "PopOutDiv" class="PopOut">
       <div class="flex-div">
         <button id="Close_Popup" class="Button_Transparent">X</button>
         <img id="PopOutImg" src="/static/popups/invitacion_grupos_investigacion.jpeg" alt="NewsImage" class="NewsImage" title="Cerrar">
       </div>
-    </div>
+    </div> -->
   <script type="text/python">
     from browser import bind, document
     
