--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
 
 <!--<div class="container">-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary dima-navbar">
-  <div class="container">
-    <a class="navbar-brand" href="#">
+  <div class="div-flex">
+    <a class="navbar-brand" href="/dashboard/">
       <img src="{% static 'assets/dima_logo.svg' %}" alt="Dima" width="300" height="60">
     </a>
 
@@ -24,26 +24,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/dashboard/">Home</a>
         </li>
-       
-
-        <!--<li class="nav-item dropdown">-->
-          <!--<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-            <!--Dropdown-->
-          <!--</a>-->
-          <!--<ul class="dropdown-menu">-->
-            <!--<li><a class="dropdown-item" href="#">Action</a></li>-->
-            <!--<li><a class="dropdown-item" href="#">Another action</a></li>-->
-            <!--<li><hr class="dropdown-divider"></li>-->
-            <!--<li><a class="dropdown-item" href="#">Something else here</a></li>-->
-          <!--</ul>-->
-        <!--</li>-->
-        <!--<li class="nav-item">-->
-          <!--<a class="nav-link disabled">Disabled</a>-->
-        <!--</li>-->
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/dashboard/upload_project">Proyectos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/dashboard/quipu/proyectos">QUIPU</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/dashboard/#">Grupos</a>
+        </li>
       </ul>
-
     </div>
   </div>
 </nav>
